--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
 
 body {
-  background-color: rgb(142, 240, 227);
+  background-image: url('../images/stardust.png');
 }
